--- a/src/app/common/components/gridBox/gridBox.html
+++ b/src/app/common/components/gridBox/gridBox.html
@@ -13,19 +13,22 @@
                             <i ng-show="page.isLoading" class="fa fa-spinner fa-pulse fa-1x fa-fw"></i>
                         </div>
                         <div class="col-md-9">
-                            <div class="pull-right">
-                                <button ng-show="page.boxOptions.showBack" type="button" class="btn btn-xs btn-default" ng-click="page.goBack()"><i class="ion-backspace"></i>Back</button>                                
-                                <button ng-show="page.boxOptions.showRefresh" type="button" class="btn btn-xs btn-default" ng-click="page.refreshData()"><i class="ion-refresh"></i>Refresh</button>                                &nbsp;
+                            <div class="pull-right" ng-show="page.boxOptions.customButtons.length==0">
+                                <button ng-show="page.boxOptions.showBack" type="button" class="btn btn-xs btn-default" ng-click="page.goBack()"><i class="ion-backspace"></i>Back</button>
+                                <button ng-show="page.boxOptions.showRefresh" type="button" class="btn btn-xs btn-default" ng-click="page.refreshData()"><i 
+                                class="ion-refresh"></i>Refresh</button>                                &nbsp;
                                 <button ng-show="page.boxOptions.showAdd" type="button" class="btn btn-xs btn-default" ng-click="page.addRecord()">
-                        <i class="fa fa-plus-circle" aria-hidden="true"></i>Add</button>                                &nbsp;
+                                 <i class="fa fa-plus-circle" aria-hidden="true"></i>Add</button>                                &nbsp;
                                 <button ng-show="page.boxOptions.showUpload" type="button" class="btn btn-xs btn-default" ng-click="page.uploadRecord()">
                         <i class="fa fa-plus-circle" aria-hidden="true"></i>Upload</button>                                &nbsp;
-                        
+
                                 <select ng-show="page.boxOptions.showCustomView && (page.pageinfo.ucvlist.length>1)" title="Select Status" ng-model="selectedUcvItem"
                                     ng-options="opt.name for opt in page.pageinfo.ucvlist" ng-change="ucvOnChange(selectedUcvItem)">
                                 </select>
                             </div>
-
+                            <div class="pull-right" ng-show="page.boxOptions.customButtons.length>0">
+                                <button ng-repeat="button in page.boxOptions.customButtons" type="button" class="btn btn-xs" ng-class="button.type" ng-click="button.onClick()"><i ng-class="button.icon"></i>{{button.text}}</button>
+                            </div>
                         </div>
                     </div>
 
@@ -80,7 +83,7 @@
                         </div>
                     </div>
                 </div>
-            </div> 
+            </div>
             <form ng-show="page.showAddRecord" ng-submit="saveForm(editForm)" name="editForm" novalidate>
                 <div class="panel panel-default bootstrap-panel xmedium-panel pnlScroll">
                     <div class="panel-heading clearfix" style="padding-top:0px;">
@@ -102,7 +105,7 @@
                             <div ng-class="{'col-md-7':page.isVerticalForm,'col-md-12':!page.isVerticalForm}">
                                 <div class="form-group" ng-repeat="col in page.formrows">
                                     <label for="inputPassword3" class="col-sm-5 control-label">{{col.text}}</label>
-                                    <div class="col-md-7" ng-switch="col.type"> 
+                                    <div class="col-md-7" ng-switch="col.type">
                                         <field-box ng-column="col" ng-entity="entity" form="editForm"></field-box>
 
                                     </div>
