--- a/src/app/common/components/panelHead/panelHead.html
+++ b/src/app/common/components/panelHead/panelHead.html
@@ -7,12 +7,12 @@
         <div class="col-md-7" style="padding-top:5px">
             <div class="pull-right" ng-show="ngCondition">
 
-                
+               
                 <!--<button type="submit"  class="btn btn-sm btn-primary" >Save</button>
                 <button type="button" class="btn btn-sm btn-warning" ng-click="resetForm()">Reset</button>
                 <button type="button" class="btn btn-sm btn-danger" ng-click="clearForm()">Clear</button>
                  <button type="button" class="btn btn-sm btn-primary" ng-click="employeeList()">List</button>-->
-                <button ng-show="showSave" type="submit" class="btn btn-sm btn-primary">Save</button>
+                <button ng-show="showSave" type="submit" class="btn btn-sm btn-primary" ng-disabled="editForm.$invalid">Save</button>
                 <button ng-show="showReset" type="button" class="btn btn-sm btn-warning" ng-click="resetForm()">Reset</button>
                 <button ng-show="showClear" type="button" class="btn btn-sm btn-info" ng-click="clearForm()">Clear</button>
                 <button ng-show="showClose" type="button" class="btn btn-sm btn-danger" ng-click="closeForm()">Close</button>
