--- a/src/app/common/components/filterBox/filterBox.html
+++ b/src/app/common/components/filterBox/filterBox.html
@@ -44,7 +44,7 @@
                         <div ng-switch-when="textbox">
                             <select ng-options="opt.value as opt.name for opt in filterOpt.textbox" ng-model="filter.operator">
                                     </select>
-                            <input type="text" placeholder="Enter Value" ng-model="filter.value" />
+                            <input type="text" placeholder="Enter Value" ng-model="filter.value" ng-change="selectChange(filter)"/>
                         </div>
                         <div ng-switch-when="select">
                             <div class="row">
@@ -57,7 +57,7 @@
                                 </div>
                             </div>
                             <select ng-options="opt.value as opt.name for opt in filter.titleMap"
-                             ng-model="filter.value">
+                             ng-model="filter.value" ng-change="selectChange(filter)">
                                     </select>
                         </div>
                         <div ng-switch-when="datepicker">
@@ -66,7 +66,7 @@
                                     <label class="radio-inline custom-radio nowrap">
                                         <input type="radio" name="{{filter.name}}" id="inlineRadio1" value="day" checked 
                                         ng-model="filter.datePicker.option1.minMode" 
-                                        ng-click="dateModeChanged(filter)">
+                                        ng-click="dateModeChanged(filter)" >
                                         <span>Date</span>
                                     </label>
                                     <label class="radio-inline custom-radio nowrap">
