--- a/src/app/pages/payroll/transaction/CustomPayrollSetting/CustomPayrollSetting.html
+++ b/src/app/pages/payroll/transaction/CustomPayrollSetting/CustomPayrollSetting.html
@@ -1,6 +1,35 @@
-<grid-box ng-model="page" ng-hide="showEditForm">
-</grid-box>
 
+<div class="row animated" ng-hide="isDate">
+    <div class="col-md-12">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="row">
+                    <div class="col-md-3">
+                        From Date
+                    </div>
+                    <div class="col-md-9">
+                        <input ng-model="acFromDate" type="text" class="form-control disabled">
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="row">
+                    <div class="col-md-3">
+                        To Date
+                    </div>
+                    <div class="col-md-9">
+                        <input ng-model="acToDate" type="text" class="form-control disabled">
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+            </div>
+        </div>
+    </div>
+</div>
+<grid-box ng-model="page">
+</grid-box>
+<!--
 <form name="editForm " novalidate ng-submit="saveForm(editForm) " ng-show="showEditForm ">
     <div class="panel panel-default xmedium-panel ">
         <div class="panel-heading" style="padding-top:0px; background-color:#e3e8ef;">
@@ -24,14 +53,14 @@
         <div class="panel-body " style="padding:5px " ng-scrollbars ng-scrollbars-config="config ">
             <!--<div class="row animated">
                 <div class="col-md-5">
-                    <button type="submit" class="btn btn-success" ng-click="pm.pending()">
+                    <button type="submit" class="btn btn-success" ng-click="pending()">
                     Pending
                 </button>
-                    <button type="submit" class="btn btn-success" ng-click="pm.ready()">
+                    <button type="submit" class="btn btn-success" ng-click="ready()">
                     Ready
                 </button>
 
-                    <button type="submit" class="btn btn-success" ng-click="pm.reGenerate()">
+                    <button type="submit" class="btn btn-success" ng-click="reGenerate()">
                     ReGenerate
                 </button>
 
@@ -39,13 +68,13 @@
                 <div class="col-md-5">
                 </div>
                 <div class="col-md-2">
-                    <button type="submit" ng-hide="pm.isGenerateSalary" class="btn bg-blue" ng-click="pm.saveGenerateSalary()">
+                    <button type="submit" ng-hide="isGenerateSalary" class="btn bg-blue" ng-click="saveGenerateSalary()">
                     Save & GenerateSalary
                 </button>
                 </div>
 
             </div>-->
 
-        </div>
-    </div>
-</form>
+</div>
+</div>
+</form>-->
