--- a/src/app/common/components/panelHead/panelHead.html
+++ b/src/app/common/components/panelHead/panelHead.html
@@ -6,12 +6,12 @@
         </div>
         <div class="col-md-7" style="padding-top:5px">
             <div class="pull-right" ng-show="ngCondition">
-                <button ng-show="isShowEdit()" type="button" class="btn btn-sm btn-danger" ng-click="editForm()">Edit</button>
-                <button ng-show="isShowSave()" type="submit" class="btn btn-sm btn-primary" ng-disabled="editForm.$invalid">Save</button>
-                <button ng-show="isShowReset()" type="button" class="btn btn-sm btn-warning" ng-click="resetForm()">Reset</button>
-                <button ng-show="isShowClear()" type="button" class="btn btn-sm btn-info" ng-click="clearForm()">Clear</button>
-                <button ng-show="isShowClose()" type="button" class="btn btn-sm btn-danger" ng-click="closeForm()">Close</button>
-                <button ng-show="isShowList()" type="button" class="btn btn-sm btn-primary" ng-click="openList()">List</button>
+                <button ng-show="isShowEdit()" type="button" class="btn btn-xs btn-default" ng-click="editForm()">Edit</button>
+                <button ng-show="isShowSave()" type="submit" class="btn btn-xs btn-primary" ng-disabled="editForm.$invalid">Save</button>
+                <button ng-show="isShowReset()" type="button" class="btn btn-xs btn-default" ng-click="resetForm()">Reset</button>
+                <button ng-show="isShowClear()" type="button" class="btn btn-xs btn-default" ng-click="clearForm()">Clear</button>
+                <button ng-show="isShowClose()" type="button" class="btn btn-xs btn-danger" ng-click="closeForm()">Close</button>
+                <button ng-show="isShowList()" type="button" class="btn btn-xs btn-default" ng-click="openList()">List</button>
 
             </div>
         </div>
