--- a/src/app/pages/organization/employees/templates/account/account-view.html
+++ b/src/app/pages/organization/employees/templates/account/account-view.html
@@ -1,7 +1,7 @@
 <div >
 <form ng-submit="empTabCtrl.saveFormCommon(editForm)" name="editForm" >
   <div class="panel panel-default bootstrap-panel xmedium-panel pnlScroll">
-    <edit-panel-head page-title="page.pageinfo.title" reset-form="empTabCtrl.resetFormCommon(editForm)"
+    <edit-panel-head   page="page" page-title="page.pageinfo.title" reset-form="empTabCtrl.resetFormCommon(editForm)"
      open-List="empTabCtrl.goToEmployeeList()"
      clear-form="empTabCtrl.clearFormCommon(editForm)"
       condition="true"></edit-panel-head>
