--- a/src/app/common/components/gridBox/gridBox.html
+++ b/src/app/common/components/gridBox/gridBox.html
@@ -103,15 +103,17 @@
                             </div>
                         </div>
                     </div>-->
-                    <edit-panel-head page-title="page.pageinfo.tagline" 
-                                    show-save="editForm.untouch"
-                                    reset-form="resetForm(editForm)" 
-                                    clear-form="clearForm(editForm)" 
-                                    condition="true" 
-                                    show-list="false"
-                                    show-close="true"
-                                    close-form="closeForm(editForm)"
-                                    ></edit-panel-head>
+                    <edit-panel-head 
+                        page="page"
+                        page-title="page.pageinfo.tagline" 
+                        show-save="editForm.untouch"
+                        reset-form="resetForm(editForm)" 
+                        clear-form="clearForm(editForm)" 
+                        condition="true" 
+                        show-list="false"
+                        show-close="true"
+                        close-form="closeForm(editForm)"
+                        ></edit-panel-head>
 
                     <div class="panel-body">
                         <div class="row">
@@ -119,8 +121,7 @@
                                 <div class="form-group" ng-repeat="col in page.formrows">
                                     <label for="inputPassword3" class="col-sm-5 control-label">{{col.text}}</label>
                                     <div class="col-md-7" ng-switch="col.type">
-                                        <field-box ng-column="col" ng-entity="entity" form="editForm"></field-box>
-
+                                        <field-box page="page" ng-column="col" ng-entity="entity" form="editForm"></field-box>
                                     </div>
                                 </div>
                             </div>
